hotfix: fixed collapse text and implemented disabled links (#411)

--- a/packages/opc-notification-drawer/src/opc-notification-drawer.scss
+++ b/packages/opc-notification-drawer/src/opc-notification-drawer.scss
@@ -107,7 +107,7 @@ a {
     &-title {
       font-family: var(--opc-global--Heading--font-Family, 'Red Hat Display');
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 500;
     }
   }
 
